@@ -37,6 +37,7 @@ class UserProfile extends B_Model
 		'recovery_message_time' => array ('type' => 'date','size' => 0,'required' => false),
 		'recovery_allowed' => array ('type' => 'boolean','size' => 0,'required' => false),
 		'update_email_message_time' => array ('type' => 'date','size' => 0,'required' => false),
+		'local_territory' => array ('type' => 'string','size' => 0,'required' => false),
 		'local_culture' => array ('type' => 'string','size' => 0,'required' => false),
 		'local_timezone' => array ('type' => 'string','size' => 0,'required' => false),
 		'created_at' => array ('type' => 'date','size' => 0,'required' => false),
@@ -114,7 +115,7 @@ class UserProfile extends B_Model
 
     public static $allow_write = array 
     (
-        'name'
+        'name','local_territory','local_timezone','local_culture'
     );
 
     /**
